// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @Overview|@Patterns Color 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #FFF;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c0:hover label {
  opacity: 1;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #EAEAEA;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c4:hover label {
  opacity: 1;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #F2F2F2;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c5:hover label {
  opacity: 1;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #DADDE2;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c6:hover label {
  opacity: 1;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #F9FAFC;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c7:hover label {
  opacity: 1;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #fefff4;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c8:hover label {
  opacity: 1;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #f0f1f4;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c9:hover label {
  opacity: 1;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #000;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c10:hover label {
  opacity: 1;
}

.c11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #29343C;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c11:hover label {
  opacity: 1;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #434343;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c12:hover label {
  opacity: 1;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #62707B;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c13:hover label {
  opacity: 1;
}

.c14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #374B5A;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c14:hover label {
  opacity: 1;
}

.c15 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: rgba(0,0,0,0.2);
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c15:hover label {
  opacity: 1;
}

.c16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #2c9e25;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c16:hover label {
  opacity: 1;
}

.c17 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #f5fff4;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c17:hover label {
  opacity: 1;
}

.c18 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #e2e2e2;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c18:hover label {
  opacity: 1;
}

.c19 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #00ba4a;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c19:hover label {
  opacity: 1;
}

.c20 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: rgba(0,0,0,0.5);
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c20:hover label {
  opacity: 1;
}

.c21 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #899197;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c21:hover label {
  opacity: 1;
}

.c22 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #3b5998;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c22:hover label {
  opacity: 1;
}

.c23 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #00CBE9;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c23:hover label {
  opacity: 1;
}

.c24 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #00B4CF;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c24:hover label {
  opacity: 1;
}

.c25 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #337ab7;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c25:hover label {
  opacity: 1;
}

.c26 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #D4D4D4;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c26:hover label {
  opacity: 1;
}

.c27 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #C2C2C2;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c27:hover label {
  opacity: 1;
}

.c28 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #7F7F7F;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c28:hover label {
  opacity: 1;
}

.c29 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #B1B1B1;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c29:hover label {
  opacity: 1;
}

.c30 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #b3bbc2;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c30:hover label {
  opacity: 1;
}

.c31 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #ef65a0;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c31:hover label {
  opacity: 1;
}

.c32 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #F76171;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c32:hover label {
  opacity: 1;
}

.c33 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #ee5797;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c33:hover label {
  opacity: 1;
}

.c34 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #E9B600;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c34:hover label {
  opacity: 1;
}

.c35 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #f10101;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c35:hover label {
  opacity: 1;
}

.c36 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #34a6bf;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c36:hover label {
  opacity: 1;
}

.c37 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #29899e;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c37:hover label {
  opacity: 1;
}

.c38 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #02a6bf;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c38:hover label {
  opacity: 1;
}

.c39 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #01899e;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c39:hover label {
  opacity: 1;
}

.c40 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #adb8c0;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c40:hover label {
  opacity: 1;
}

.c41 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #a7a7a7;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c41:hover label {
  opacity: 1;
}

.c42 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #e3e6e9;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c42:hover label {
  opacity: 1;
}

.c43 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #bdbdbd;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c43:hover label {
  opacity: 1;
}

.c44 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #000;
  background: #e9e9e9;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c44:hover label {
  opacity: 1;
}

.c45 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: #bb2333;
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c45:hover label {
  opacity: 1;
}

.c46 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  width: 200px;
  padding: 20px;
  margin: 10px;
  box-sizing: border-box;
  color: #fff;
  background: rgba(70,73,77,.93);
  border: solid 1px #bdbbb9;
  border-radius: 2px;
  font-family: Roboto,sans-serif;
  cursor: pointer;
}

.c46:hover label {
  opacity: 1;
}

.c1 {
  margin: 0 0 10px;
  font-weight: bold;
}

.c2 {
  margin: 0;
}

.c3 {
  position: absolute;
  top: 20px;
  right: 20px;
  opacity: 0;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

<div>
  <h2
    style={
      Object {
        "fontFamily": "Roboto",
        "margin": "20px 10px",
      }
    }
  >
    Color
  </h2>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      className="c0"
      color="#FFF"
      data-clipboard-text="\${props => props.theme.colors.white}"
    >
      <p
        className="c1"
      >
        White
      </p>
      <p
        className="c2"
      >
        #FFF
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c4"
      color="#EAEAEA"
      data-clipboard-text="\${props => props.theme.colors.whiteDark}"
    >
      <p
        className="c1"
      >
        WhiteDark
      </p>
      <p
        className="c2"
      >
        #EAEAEA
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c5"
      color="#F2F2F2"
      data-clipboard-text="\${props => props.theme.colors.whitebg}"
    >
      <p
        className="c1"
      >
        WhiteBg
      </p>
      <p
        className="c2"
      >
        #F2F2F2
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c6"
      color="#DADDE2"
      data-clipboard-text="\${props => props.theme.colors.whiteLight}"
    >
      <p
        className="c1"
      >
        WhiteLight
      </p>
      <p
        className="c2"
      >
        #DADDE2
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c7"
      color="#F9FAFC"
      data-clipboard-text="\${props => props.theme.colors.whiteExLight}"
    >
      <p
        className="c1"
      >
        WhiteExLight
      </p>
      <p
        className="c2"
      >
        #F9FAFC
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c8"
      color="#fefff4"
      data-clipboard-text="\${props => props.theme.colors.whiteEnLight}"
    >
      <p
        className="c1"
      >
        WhiteEnLight
      </p>
      <p
        className="c2"
      >
        #fefff4
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c9"
      color="#f0f1f4"
      data-clipboard-text="\${props => props.theme.colors.whitenLight}"
    >
      <p
        className="c1"
      >
        whitenLight
      </p>
      <p
        className="c2"
      >
        #f0f1f4
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c10"
      color="#000"
      data-clipboard-text="\${props => props.theme.colors.black}"
    >
      <p
        className="c1"
      >
        Black
      </p>
      <p
        className="c2"
      >
        #000
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c11"
      color="#29343C"
      data-clipboard-text="\${props => props.theme.colors.blackGrey}"
    >
      <p
        className="c1"
      >
        BlackGrey
      </p>
      <p
        className="c2"
      >
        #29343C
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c12"
      color="#434343"
      data-clipboard-text="\${props => props.theme.colors.blackGray}"
    >
      <p
        className="c1"
      >
        BlackGray
      </p>
      <p
        className="c2"
      >
        #434343
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c13"
      color="#62707B"
      data-clipboard-text="\${props => props.theme.colors.darkGray}"
    >
      <p
        className="c1"
      >
        DarkGray
      </p>
      <p
        className="c2"
      >
        #62707B
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c14"
      color="#374B5A"
      data-clipboard-text="\${props => props.theme.colors.blackLight}"
    >
      <p
        className="c1"
      >
        BlackLight
      </p>
      <p
        className="c2"
      >
        #374B5A
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c15"
      color="rgba(0, 0, 0, 0.2)"
      data-clipboard-text="\${props => props.theme.colors.blackAlpha}"
    >
      <p
        className="c1"
      >
        BlackAlpha
      </p>
      <p
        className="c2"
      >
        rgba(0, 0, 0, 0.2)
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c16"
      color="#2c9e25"
      data-clipboard-text="\${props => props.theme.colors.greenMain}"
    >
      <p
        className="c1"
      >
        GreenMain
      </p>
      <p
        className="c2"
      >
        #2c9e25
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c17"
      color="#f5fff4"
      data-clipboard-text="\${props => props.theme.colors.greenLight}"
    >
      <p
        className="c1"
      >
        GreenLight
      </p>
      <p
        className="c2"
      >
        #f5fff4
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c18"
      color="#e2e2e2"
      data-clipboard-text="\${props => props.theme.colors.greenWhite}"
    >
      <p
        className="c1"
      >
        GreenWhite
      </p>
      <p
        className="c2"
      >
        #e2e2e2
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c19"
      color="#00ba4a"
      data-clipboard-text="\${props => props.theme.colors.greenBlank}"
    >
      <p
        className="c1"
      >
        GreenBlank
      </p>
      <p
        className="c2"
      >
        #00ba4a
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c20"
      color="rgba(0, 0, 0, 0.5)"
      data-clipboard-text="\${props => props.theme.colors.blackAlphaDark}"
    >
      <p
        className="c1"
      >
        BlackAlphaDark
      </p>
      <p
        className="c2"
      >
        rgba(0, 0, 0, 0.5)
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c21"
      color="#899197"
      data-clipboard-text="\${props => props.theme.colors.blackExLight}"
    >
      <p
        className="c1"
      >
        BlackExLight
      </p>
      <p
        className="c2"
      >
        #899197
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c22"
      color="#3b5998"
      data-clipboard-text="\${props => props.theme.colors.blueFacebook}"
    >
      <p
        className="c1"
      >
        BlueFacebook
      </p>
      <p
        className="c2"
      >
        #3b5998
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c23"
      color="#00CBE9"
      data-clipboard-text="\${props => props.theme.colors.blue}"
    >
      <p
        className="c1"
      >
        Blue
      </p>
      <p
        className="c2"
      >
        #00CBE9
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c24"
      color="#00B4CF"
      data-clipboard-text="\${props => props.theme.colors.blueDark}"
    >
      <p
        className="c1"
      >
        BlueDark
      </p>
      <p
        className="c2"
      >
        #00B4CF
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c25"
      color="#337ab7"
      data-clipboard-text="\${props => props.theme.colors.blueExDark}"
    >
      <p
        className="c1"
      >
        BlueExDark
      </p>
      <p
        className="c2"
      >
        #337ab7
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c26"
      color="#D4D4D4"
      data-clipboard-text="\${props => props.theme.colors.gray}"
    >
      <p
        className="c1"
      >
        Gray
      </p>
      <p
        className="c2"
      >
        #D4D4D4
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c27"
      color="#C2C2C2"
      data-clipboard-text="\${props => props.theme.colors.grayLight}"
    >
      <p
        className="c1"
      >
        GrayLight
      </p>
      <p
        className="c2"
      >
        #C2C2C2
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c28"
      color="#7F7F7F"
      data-clipboard-text="\${props => props.theme.colors.grayDark}"
    >
      <p
        className="c1"
      >
        GrayDark
      </p>
      <p
        className="c2"
      >
        #7F7F7F
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c29"
      color="#B1B1B1"
      data-clipboard-text="\${props => props.theme.colors.grayTintsDark}"
    >
      <p
        className="c1"
      >
        GrayTintsDark
      </p>
      <p
        className="c2"
      >
        #B1B1B1
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c30"
      color="#b3bbc2"
      data-clipboard-text="\${props => props.theme.colors.lightDark}"
    >
      <p
        className="c1"
      >
        LightDark
      </p>
      <p
        className="c2"
      >
        #b3bbc2
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c31"
      color="#ef65a0"
      data-clipboard-text="\${props => props.theme.colors.pink}"
    >
      <p
        className="c1"
      >
        Ping
      </p>
      <p
        className="c2"
      >
        #ef65a0
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c32"
      color="#F76171"
      data-clipboard-text="\${props => props.theme.colors.pinkLight}"
    >
      <p
        className="c1"
      >
        PinkLight
      </p>
      <p
        className="c2"
      >
        #F76171
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c33"
      color="#ee5797"
      data-clipboard-text="\${props => props.theme.colors.pinkDark}"
    >
      <p
        className="c1"
      >
        PinkDark
      </p>
      <p
        className="c2"
      >
        #ee5797
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c34"
      color="#E9B600"
      data-clipboard-text="\${props => props.theme.colors.orangeDark}"
    >
      <p
        className="c1"
      >
        orangeDark
      </p>
      <p
        className="c2"
      >
        #E9B600
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c35"
      color="#f10101"
      data-clipboard-text="\${props => props.theme.colors.red}"
    >
      <p
        className="c1"
      >
        red
      </p>
      <p
        className="c2"
      >
        #f10101
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c36"
      color="#34a6bf"
      data-clipboard-text="\${props => props.theme.colors.skyBlue}"
    >
      <p
        className="c1"
      >
        SkyBlue
      </p>
      <p
        className="c2"
      >
        #34a6bf
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c37"
      color="#29899e"
      data-clipboard-text="\${props => props.theme.colors.skyDarkBlue}"
    >
      <p
        className="c1"
      >
        SkyDarkBlue
      </p>
      <p
        className="c2"
      >
        #29899e
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c38"
      color="#02a6bf"
      data-clipboard-text="\${props => props.theme.colors.skyLightBlue}"
    >
      <p
        className="c1"
      >
        SkyLightBlue
      </p>
      <p
        className="c2"
      >
        #02a6bf
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c39"
      color="#01899e"
      data-clipboard-text="\${props => props.theme.colors.skyLightDark}"
    >
      <p
        className="c1"
      >
        SkyLightDark
      </p>
      <p
        className="c2"
      >
        #01899e
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c40"
      color="#adb8c0"
      data-clipboard-text="\${props => props.theme.colors.darkSky}"
    >
      <p
        className="c1"
      >
        DarkSky
      </p>
      <p
        className="c2"
      >
        #adb8c0
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c41"
      color="#a7a7a7"
      data-clipboard-text="\${props => props.theme.colors.darkGrayBlank}"
    >
      <p
        className="c1"
      >
        DarkGrayBlank
      </p>
      <p
        className="c2"
      >
        #a7a7a7
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c42"
      color="#e3e6e9"
      data-clipboard-text="\${props => props.theme.colors.darkBlueBlank}"
    >
      <p
        className="c1"
      >
        DarkBlueBlank
      </p>
      <p
        className="c2"
      >
        #e3e6e9
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c43"
      color="#bdbdbd"
      data-clipboard-text="\${props => props.theme.colors.darkBlank}"
    >
      <p
        className="c1"
      >
        DarkBlank
      </p>
      <p
        className="c2"
      >
        #bdbdbd
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c44"
      color="#e9e9e9"
      data-clipboard-text="\${props => props.theme.colors.grayBlank}"
    >
      <p
        className="c1"
      >
        GrayBlank
      </p>
      <p
        className="c2"
      >
        #e9e9e9
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c45"
      color="#bb2333"
      data-clipboard-text="\${props => props.theme.colors.bloodRed}"
    >
      <p
        className="c1"
      >
        BloodRed
      </p>
      <p
        className="c2"
      >
        #bb2333
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
    <div
      className="c46"
      color="rgba(70, 73, 77, .93)"
      data-clipboard-text="\${props => props.theme.colors.modalOverlayBg}"
    >
      <p
        className="c1"
      >
        ModalOverlayBg
      </p>
      <p
        className="c2"
      >
        rgba(70, 73, 77, .93)
      </p>
      <label
        className="c3"
      >
        Copy
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|@Store Featured 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  min-width: 0;
  padding: 11px 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: auto;
}

.c2 {
  padding: 11px 13px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 1px solid #DADDE2;
  border-radius: 5px;
  box-sizing: border-box;
  min-width: 140px;
  padding: 9px;
  margin: 0 9px 0 0;
}

.c2:last-child {
  margin: 0;
}

.c3 {
  display: block;
  width: 100%;
  padding: 9px 0;
  background: #2c9e25;
  border: 2px solid transparent;
  border-radius: 4px;
  font-weight: bold;
  line-height: 20px;
  font-size: 17px;
  text-align: center;
  -webkit-letter-spacing: 0.51px;
  -moz-letter-spacing: 0.51px;
  -ms-letter-spacing: 0.51px;
  letter-spacing: 0.51px;
  color: #FFF;
  cursor: pointer;
  margin: 0 0 21px;
  -webkit-transition: background 205ms linear;
  transition: background 205ms linear;
}

.c3:hover {
  background: #FFF;
  color: #2c9e25;
  border-color: #2c9e25 !important;
}

.c4 {
  text-align: center;
  font-weight: 500;
  line-height: 23px;
  font-size: 13px;
  color: #899197;
}

@media (min-width:25.8125em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    font-size: 22px;
    padding: 28px 0 20px;
  }
}

@media (min-width:36em) {
  .c0 {
    padding: 33px 0;
  }
}

@media (min-width:48em) {
  .c0 {
    padding: 28px 0 20px;
    margin: 0 -30px 0 0;
  }
}

@media (min-width:62em) {
  .c0 {
    padding: 37px 0;
    margin: 0 -30px 0 0;
  }
}

@media (min-width:75em) {
  .c0 {
    padding: 37px 0 33px;
    margin: 0;
  }
}

@media (min-width:25.8125em) {
  .c2 {
    min-width: 147px;
    padding: 11px 9px;
  }
}

@media (min-width:62em) {
  .c2 {
    min-width: 158px;
    margin: 0 27px 0 0;
  }
}

@media (min-width:75em) {
  .c2 {
    min-width: 147px;
  }
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className="c2"
    >
      <a
        className="c3"
        href="/coupons/undefined"
        onClick={[Function]}
      >
        Visit Store
      </a>
      <p
        className="c4"
      >
        $2 Cash Back
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|@Store StoreList 1`] = `
.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: block;
}

.c0 {
  margin: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #DADDE2;
  border-bottom: none;
  box-sizing: border-box;
  height: 216px;
  padding: 0 27px;
}

.c1:first-child {
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.c1:last-child {
  border-bottom: 1px solid #DADDE2;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

.c3 {
  padding: 10px;
  box-sizing: border-box;
  width: 88px;
  margin: 0 auto;
}

.c4 {
  display: block;
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
  object-fit: contain;
}

.c6 {
  font-weight: 300;
  font-size: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #374B5A;
  margin: 0 0 18px;
  font-size: 17px;
}

.c6 > span {
  display: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  background: #2c9e25;
  color: #FFF;
  border: 2px solid transparent;
  box-sizing: border-box;
  border-radius: 4px;
  font-size: 17px;
  text-align: center;
  -webkit-letter-spacing: 0.51px;
  -moz-letter-spacing: 0.51px;
  -ms-letter-spacing: 0.51px;
  letter-spacing: 0.51px;
  cursor: pointer;
  margin: 0 0 0 10px;
  -webkit-transition: background 205ms linear;
  transition: background 205ms linear;
  margin: 0;
  height: 40px;
}

.c7:hover {
  background: #FFF;
  color: #2c9e25;
  border-color: #2c9e25 !important;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  font-size: 18px;
  text-align: center;
  -webkit-letter-spacing: 0.45px;
  -moz-letter-spacing: 0.45px;
  -ms-letter-spacing: 0.45px;
  letter-spacing: 0.45px;
  color: #EAEAEA;
  background: transparent;
  border: none;
  outline: none;
  cursor: pointer;
  -webkit-transition: color 205ms linear;
  transition: color 205ms linear;
}

.c8 p {
  line-height: 80px;
}

.c8:hover {
  color: #7F7F7F;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:25.8125em) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:25.8125em) {
  .c1 {
    padding: 0 35px;
    height: 196px;
  }
}

@media (min-width:48em) {
  .c1 {
    padding: 0 27px 0 10px;
    height: 133px;
  }
}

@media (min-width:62em) {
  .c1 {
    padding: 0 43px 0 18px;
  }
}

@media (min-width:75em) {
  .c1 {
    padding: 0 62px 0 40px;
  }
}

@media (min-width:25.8125em) {
  .c3 {
    width: 88px;
    margin: 0;
  }
}

@media (min-width:75em) {
  .c3 {
    width: 112px;
  }
}

@media (min-width:48em) {
  .c4 {
    margin: 0 26px 0 0;
  }
}

@media (min-width:36em) {
  .c5 {
    display: block;
  }
}

@media (min-width:48em) {
  .c5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    min-width: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:25.8125em) {
  .c6 {
    margin: 0 0 16px;
    font-size: 20px;
  }
}

@media (min-width:48em) {
  .c6 {
    font-size: 17px;
    margin: 0;
  }
}

@media (min-width:62em) {
  .c6 > span {
    display: inline;
  }
}

@media (min-width:25.8125em) {
  .c7 {
    width: 191px;
  }
}

@media (min-width:48em) {
  .c7 {
    width: 170px;
  }
}

@media (min-width:75em) {
  .c7 {
    width: 184px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <a
            href="/coupons/undefined"
            onClick={[Function]}
          >
            <img
              alt="Target Coupon Codes May | 2020"
              className="c4"
              onError={[Function]}
              src="image-placeholder.png"
            />
          </a>
        </div>
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Instant Savings
          </p>
          <a
            className="c7"
            href="/coupons/undefined"
            onClick={[Function]}
          >
            Visit Store
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
    onClick={[Function]}
  >
    
  </div>
</div>
`;

exports[`Storyshots Components|@Store StoreMain 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  min-width: 0;
  padding: 11px 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: auto;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: block;
}

.c4 {
  margin: 0;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #DADDE2;
  border-bottom: none;
  box-sizing: border-box;
  height: 216px;
  padding: 0 27px;
}

.c5:first-child {
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.c5:last-child {
  border-bottom: 1px solid #DADDE2;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

.c7 {
  padding: 10px;
  box-sizing: border-box;
  width: 88px;
  margin: 0 auto;
}

.c8 {
  display: block;
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
  object-fit: contain;
}

.c10 {
  font-weight: 300;
  font-size: 20px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #374B5A;
  margin: 0 0 18px;
  font-size: 17px;
}

.c10 > span {
  display: none;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  background: #2c9e25;
  color: #FFF;
  border: 2px solid transparent;
  box-sizing: border-box;
  border-radius: 4px;
  font-size: 17px;
  text-align: center;
  -webkit-letter-spacing: 0.51px;
  -moz-letter-spacing: 0.51px;
  -ms-letter-spacing: 0.51px;
  letter-spacing: 0.51px;
  cursor: pointer;
  margin: 0 0 0 10px;
  -webkit-transition: background 205ms linear;
  transition: background 205ms linear;
  margin: 0;
  height: 40px;
}

.c11:hover {
  background: #FFF;
  color: #2c9e25;
  border-color: #2c9e25 !important;
}

.c12 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  font-size: 18px;
  text-align: center;
  -webkit-letter-spacing: 0.45px;
  -moz-letter-spacing: 0.45px;
  -ms-letter-spacing: 0.45px;
  letter-spacing: 0.45px;
  color: #EAEAEA;
  background: transparent;
  border: none;
  outline: none;
  cursor: pointer;
  -webkit-transition: color 205ms linear;
  transition: color 205ms linear;
}

.c12 p {
  line-height: 80px;
}

.c12:hover {
  color: #7F7F7F;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1 {
  padding: 7px 0 0 0;
  line-height: 29px;
  font-weight: bold;
  font-size: 25px;
  color: #374B5A;
  display: none;
}

@media (min-width:25.8125em) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    font-size: 22px;
    padding: 28px 0 20px;
  }
}

@media (min-width:36em) {
  .c2 {
    padding: 33px 0;
  }
}

@media (min-width:48em) {
  .c2 {
    padding: 28px 0 20px;
    margin: 0 -30px 0 0;
  }
}

@media (min-width:62em) {
  .c2 {
    padding: 37px 0;
    margin: 0 -30px 0 0;
  }
}

@media (min-width:75em) {
  .c2 {
    padding: 37px 0 33px;
    margin: 0;
  }
}

@media (min-width:25.8125em) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:25.8125em) {
  .c5 {
    padding: 0 35px;
    height: 196px;
  }
}

@media (min-width:48em) {
  .c5 {
    padding: 0 27px 0 10px;
    height: 133px;
  }
}

@media (min-width:62em) {
  .c5 {
    padding: 0 43px 0 18px;
  }
}

@media (min-width:75em) {
  .c5 {
    padding: 0 62px 0 40px;
  }
}

@media (min-width:25.8125em) {
  .c7 {
    width: 88px;
    margin: 0;
  }
}

@media (min-width:75em) {
  .c7 {
    width: 112px;
  }
}

@media (min-width:48em) {
  .c8 {
    margin: 0 26px 0 0;
  }
}

@media (min-width:36em) {
  .c9 {
    display: block;
  }
}

@media (min-width:48em) {
  .c9 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    min-width: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:25.8125em) {
  .c10 {
    margin: 0 0 16px;
    font-size: 20px;
  }
}

@media (min-width:48em) {
  .c10 {
    font-size: 17px;
    margin: 0;
  }
}

@media (min-width:62em) {
  .c10 > span {
    display: inline;
  }
}

@media (min-width:25.8125em) {
  .c11 {
    width: 191px;
  }
}

@media (min-width:48em) {
  .c11 {
    width: 170px;
  }
}

@media (min-width:75em) {
  .c11 {
    width: 184px;
  }
}

@media (min-width:48em) {
  .c1 {
    display: block;
    font-size: 25px;
  }
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    Browse among more than 1000 stores
  </h3>
  <div
    className="c2"
  >
    <ul
      className="c3"
    />
  </div>
  <div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <a
              href="/coupons/undefined"
              onClick={[Function]}
            >
              <img
                alt="Target Coupon Codes May | 2020"
                className="c8"
                onError={[Function]}
                src="image-placeholder.png"
              />
            </a>
          </div>
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              Instant Savings
            </p>
            <a
              className="c11"
              href="/coupons/undefined"
              onClick={[Function]}
            >
              Visit Store
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c12"
      onClick={[Function]}
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|@Store StoreSidebar 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 5px;
  background: white;
}

.c2 > p {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2:hover {
  background: #eee;
}

.c2:hover > p {
  color: rgba(0,0,0,0.7);
}

.c3 {
  font-weight: 500;
  line-height: 32px;
  font-size: 13px;
  color: #c2c2c2;
}

.c1 {
  display: none;
}

.c4 {
  position: relative;
  border: 1px solid #dadde2;
  border-radius: 5px;
  margin-top: 20px;
  cursor: pointer;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  line-height: 21px;
  font-size: 18px;
  -webkit-letter-spacing: 0.45px;
  -moz-letter-spacing: 0.45px;
  -ms-letter-spacing: 0.45px;
  letter-spacing: 0.45px;
  color: #899197;
  padding: 10px 20px;
}

.c6 {
  position: absolute;
  right: 0;
  top: 18px;
  width: 11px;
  height: 8px;
  background: #b1b1b1;
  -webkit-clip-path: polygon(50% 0%,0% 100%,100% 100%);
  clip-path: polygon(50% 0%,0% 100%,100% 100%);
  margin-right: 20px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 1px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@media (min-width:48em) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column nowrap;
    -ms-flex-flow: column nowrap;
    flex-flow: column nowrap;
    padding-bottom: 30px;
  }

  .c1 > h2 {
    font-weight: bold;
    line-height: 24px;
    font-size: 20px;
    -webkit-letter-spacing: 0.5px;
    -moz-letter-spacing: 0.5px;
    -ms-letter-spacing: 0.5px;
    letter-spacing: 0.5px;
    color: #899197;
    margin: 10px 0;
    padding: 5px;
  }
}

@media (min-width:48em) {
  .c4 {
    display: none;
  }
}

@media (min-width:48em) {
  .c0 {
    width: 211px;
    margin: 0 29px 0 0;
  }
}

@media (min-width:62em) {
  .c0 {
    width: 293px;
    margin: 0 26px 0 0;
  }
}

@media (min-width:75em) {
  .c0 {
    width: 260px;
    margin: 0 30px 0 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Stores
    </h2>
    <div
      className="c2"
      onClick={[Function]}
    >
      <p
        className="c3"
      />
    </div>
    <div
      className="c2"
      onClick={[Function]}
    >
      <p
        className="c3"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <p
      className="c5"
      onClick={[Function]}
    >
      Select category...
    </p>
    <div />
    <div
      className="c6"
    />
  </div>
</div>
`;

exports[`Storyshots Components|@Store TagList 1`] = `
.c0 {
  padding: 25px 0 0 0;
  position: absolute;
  left: -1px;
  top: 44px;
  width: 100%;
  background: #FFF;
  border: 0.5px solid #DADDE2;
  box-shadow: 0 12px 22px rgba(0,0,0,0.2);
  border-top: none;
  border-radius: 5px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  padding: 13px 0 32px;
  opacity: 0;
  z-index: -1;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 3px;
  padding: 5px 0;
  margin: 0;
  font-size: 13px;
  color: #C2C2C2;
  cursor: pointer;
  padding: 5px 25px;
}

.c1:hover {
  background: #F9FAFC;
}

.c2 {
  display: block;
  width: 50px;
  text-align: center;
  padding: 3px 0;
  border: 2px solid #D4D4D4;
  border-radius: 7px;
  font-size: 13px;
  color: #C2C2C2;
}

@media (min-width:36em) {
  .c0 {
    display: block;
    position: static;
    box-shadow: none;
    border: none;
    opacity: 1;
    z-index: 1;
    pointer-events: initial;
  }
}

@media (min-width:36em) {
  .c1 {
    padding: 5px 0;
  }
}

<ul
  className="c0"
>
  <li
    className="c1"
    onClick={[Function]}
  >
    Accessories
     
    <span
      className="c2"
    >
      0
    </span>
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Beauty
     
    <span
      className="c2"
    >
      0
    </span>
  </li>
  <li
    className="c1"
    onClick={[Function]}
  >
    Clothing
     
    <span
      className="c2"
    >
      0
    </span>
  </li>
</ul>
`;
